Fix sidebar CSS for dark mode

--- a/data/application.css
+++ b/data/application.css
@@ -93,22 +93,27 @@
 
 .sidebar-item-title {
     padding: 0px;
-    box-shadow: 1px 1px 3px 3px alpha(shade(@theme_bg_color, 1.7), 0.9);
-    background-color: alpha(shade(@theme_bg_color, 1.7), 0.9);
+    box-shadow: 1px 1px 3px 3px alpha(shade(@theme_bg_color, 1.3), 0.9);
+    background-color: alpha(shade(@theme_bg_color, 1.3), 0.9);
     color: @theme_fg_color;
-    text-shadow: 1px 1px shade(@theme_bg_color, 1.7);
+    text-shadow: 1px 1px shade(@theme_bg_color, 1.3);
 }
 
 .sidebar-item-image {
-    background-color: shade(@theme_bg_color, 1.7);
+    background-color: shade(@theme_bg_color, 1.3);
 }
 
 .sidebar-item {
     border: 1px solid alpha(@theme_fg_color, 0.5);
-    background-color: shade(@theme_bg_color, 1.7);
+    background-color: shade(@theme_bg_color, 1.3);
     padding: 3px;
     border-radius: 2px;
     outline-width: 0px;
+}
+
+
+.site-manager-child {
+    background-color: shade(@theme_bg_color, 1.3);
 }
 
 .sidebar-item:visited {
@@ -146,10 +151,6 @@
 
 .no-border {
     border: none;
-}
-
-.site-manager-child {
-    background-color: @theme_selected_fg_color;
 }
 
 .button-edit {
